@@ -16,35 +16,19 @@
 
 package com.ning.billing.catalog.io;
 
-import java.io.File;
-import java.io.IOException;
-import java.io.InputStream;
-import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
-import java.net.URLConnection;
-import java.net.URLDecoder;
 import java.util.ArrayList;
 import java.util.Date;
-import java.util.Enumeration;
-import java.util.HashSet;
 import java.util.List;
-import java.util.Scanner;
-import java.util.Set;
-import java.util.jar.JarEntry;
-import java.util.jar.JarFile;
-
-import javax.xml.bind.JAXBException;
-import javax.xml.transform.TransformerException;
-
-import org.xml.sax.SAXException;
 
 import com.google.inject.Inject;
 import com.ning.billing.catalog.Catalog;
 import com.ning.billing.catalog.VersionedCatalog;
-import com.ning.billing.catalog.api.InvalidConfigException;
 import com.ning.billing.lifecycle.IService.ServiceException;
 import com.ning.billing.util.clock.IClock;
+import com.ning.billing.util.config.UriAccessor;
 import com.ning.billing.util.config.XMLLoader;
 
 public class VersionedCatalogLoader implements ICatalogLoader  {
@@ -64,25 +48,21 @@ public class VersionedCatalogLoader implements ICatalogLoader  {
 	 * @see com.ning.billing.catalog.io.ICatalogLoader#load(java.lang.String)
 	 */
 	@Override
-	public  VersionedCatalog load(String urlString) throws ServiceException{
+	public  VersionedCatalog load(String uriString) throws ServiceException{
 		try {
-			List<URL> xmlURLs = null;
+			List<URI> xmlURIs = null;
 			
-			if(urlString.endsWith(XML_EXTENSION)) { //assume its an xml file
-				xmlURLs = new ArrayList<URL>();
-	        	xmlURLs.add(new URL(urlString));
+			if(uriString.endsWith(XML_EXTENSION)) { //assume its an xml file
+				xmlURIs = new ArrayList<URI>();
+	        	xmlURIs.add(new URI(uriString));
 			} else { //assume its a directory
-				String[] directoryContents = getResourceListing(urlString);
-<<<<<<< Updated upstream
-				xmlURLs = findXmlReferences(directoryContents, url);
-=======
-				xmlURLs = findXmlReferences(directoryContents, new URL(urlString));
->>>>>>> Stashed changes
+				String directoryContents = UriAccessor.accessUriAsString(uriString);
+				xmlURIs = findXmlReferences(directoryContents, new URL(uriString));
 			}
 			
 			VersionedCatalog result = new VersionedCatalog();
-			for(URL u : xmlURLs) {
-				Catalog catalog = XMLLoader.getObjectFromURL(u, Catalog.class);
+			for(URI u : xmlURIs) {
+				Catalog catalog = XMLLoader.getObjectFromUri(u, Catalog.class);
 				result.add(catalog);
 			}
 			Date now = clock.getUTCNow().toDate();
@@ -92,26 +72,25 @@ public class VersionedCatalogLoader implements ICatalogLoader  {
 			throw new ServiceException("Problem encountered loading catalog", e);
 		}
 	}
-
 	
-	protected  List<URL> findXmlReferences(String directoryContents, URL url) throws MalformedURLException {
+	protected  List<URI> findXmlReferences(String directoryContents, URL url) throws URISyntaxException {
 		if(url.getProtocol().equals(PROTOCOL_FOR_FILE)) {
 			return findXmlFileReferences(directoryContents, url);
 		} 
 		return findXmlUrlReferences(directoryContents, url);
 	}
 
-	protected  List<URL> findXmlUrlReferences(String directoryContents, URL url) throws MalformedURLException {
-		List<URL> results = new ArrayList<URL>();
+	protected  List<URI> findXmlUrlReferences(String directoryContents, URL url) throws URISyntaxException {
+		List<URI> results = new ArrayList<URI>();
 		List<String> urlFragments = extractHrefs(directoryContents);
 		for(String u : urlFragments) {
 			if(u.endsWith(XML_EXTENSION)) { //points to xml
 				if(u.startsWith("/")) { //absolute path need to add the protocol
-					results.add(new URL(url.getProtocol() + ":" + u));
+					results.add(new URI(url.getProtocol() + ":" + u));
 				} else if (u.startsWith("http:")) { // full url
-					results.add(new URL(u));
+					results.add(new URI(u));
 				} else { // relative url stick the name on the end
-					results.add(appendToURL(url,u));
+					results.add(appendToURI(url,u));
 				}
 			}
 		}
@@ -146,70 +125,24 @@ public class VersionedCatalogLoader implements ICatalogLoader  {
 		return results;
 	}
 
-	protected  List<URL> findXmlFileReferences(String directoryContents, URL url) throws MalformedURLException {
-		List<URL> results = new ArrayList<URL>();
+	protected  List<URI> findXmlFileReferences(String directoryContents, URL url) throws URISyntaxException {
+		List<URI> results = new ArrayList<URI>();
 		String[] filenames = directoryContents.split("\\n");
 		for(String filename : filenames) {
 			if(filename.endsWith(XML_EXTENSION)) {
-				results.add(appendToURL(url,filename));
+				results.add(appendToURI(url,filename));
 			}
 		}
 		return results;
 	}
 
-	protected  URL appendToURL(final URL url, final String filename) throws MalformedURLException {
+	protected  URI appendToURI(final URL url, final String filename) throws URISyntaxException {
 		String f = filename;
 		if (!url.toString().endsWith("/")) {
 			f = "/" + filename;
 		}
-		return new URL(url.toString() + f);
+		return new URI(url.toString() + f);
 	}
-
-	protected  String pullContentsFrom(final URL url) throws IOException {
-		URLConnection connection = url.openConnection();
-		InputStream content = connection.getInputStream();
-		return new Scanner(content).useDelimiter("\\A").next();
-	}
-//	
-//	private String[] getResourceListing(String path) throws URISyntaxException, IOException {
-//	      URL dirURL = this.getClass().getClassLoader().getResource(path);
-//	      if (dirURL != null && dirURL.getProtocol().equals("file")) {
-//	        /* A file path: easy enough */
-//	        return new File(dirURL.toURI()).list();
-//	      } 
-//
-//	      if (dirURL == null) {
-//	        /* 
-//	         * In case of a jar file, we can't actually find a directory.
-//	         * Have to assume the same jar as clazz.
-//	         */
-//	        String me = clazz.getName().replace(".", "/")+".class";
-//	        dirURL = clazz.getClassLoader().getResource(me);
-//	      }
-//	      
-//	      if (dirURL.getProtocol().equals("jar")) {
-//	        /* A JAR path */
-//	        String jarPath = dirURL.getPath().substring(5, dirURL.getPath().indexOf("!")); //strip out only the JAR file
-//	        JarFile jar = new JarFile(URLDecoder.decode(jarPath, "UTF-8"));
-//	        Enumeration<JarEntry> entries = jar.entries(); //gives ALL entries in jar
-//	        Set<String> result = new HashSet<String>(); //avoid duplicates in case it is a subdirectory
-//	        while(entries.hasMoreElements()) {
-//	          String name = entries.nextElement().getName();
-//	          if (name.startsWith(path)) { //filter according to the path
-//	            String entry = name.substring(path.length());
-//	            int checkSubdir = entry.indexOf("/");
-//	            if (checkSubdir >= 0) {
-//	              // if it is a subdirectory, we just return the directory name
-//	              entry = entry.substring(0, checkSubdir);
-//	            }
-//	            result.add(entry);
-//	          }
-//	        }
-//	        return result.toArray(new String[result.size()]);
-//	      } 
-//	        
-//	      throw new UnsupportedOperationException("Cannot list files for URL "+dirURL);
-//	  }
 
 	
 }
